# anisearch-discord-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  requirements.txt  schema.sql  start.sh
.github/: dependabot.yml
.github/workflows/: black.yml  codeql-analysis.yml  lint.yml  test.yml
animesearch/: __main__.py  bot.py  config.example.py
animesearch/cogs/admin/: __init__.py  admin.py
animesearch/cogs/anilist/: __init__.py  anilist.py
animesearch/cogs/anime/: __init__.py  anime.py
animesearch/cogs/character/: __init__.py  character.py
animesearch/cogs/events/: __init__.py  events.py
animesearch/cogs/help/: __init__.py  help.py
animesearch/cogs/image/: __init__.py  image.py
animesearch/cogs/kitsu/: __init__.py  kitsu.py
animesearch/cogs/manga/: __init__.py  manga.py
animesearch/cogs/myanimelist/: __init__.py  myanimelist.py
animesearch/cogs/profile/: __init__.py  profile.py
animesearch/cogs/random/: __init__.py  random.py
animesearch/cogs/settings/: __init__.py  settings.py
animesearch/cogs/staff/: __init__.py  staff.py
animesearch/cogs/studio/: __init__.py  studio.py
animesearch/cogs/theme/: __init__.py  theme.py
animesearch/utils/: logger.py  requests.py
animesearch/utils/database/: prefix.py  profile.py
animesearch/utils/queries/: studio_query.py
anisearch/: __init__.py  __main__.py  bot.py  config.example.py  config.py  config_example.py
anisearch-bot/: Cargo.toml  Dockerfile  build.rs
anisearch-bot/src/: api.rs  config.rs  database.rs  error.rs  events.rs  main.rs
anisearch-bot/src/clients/anilist/: error.rs  mod.rs
anisearch-bot/src/clients/anilist/queries/: character.graphql  collection.graphql  media.graphql  schema.graphql  staff.graphql  studio.graphql
anisearch-bot/src/commands/: autocomplete.rs  choices.rs  mod.rs
anisearch-bot/src/commands/help/: invite.rs  mod.rs  ping.rs  stats.rs  support.rs
anisearch-bot/src/commands/profile/: add.rs  anilist.rs  info.rs  kitsu.rs  mod.rs  myanimelist.rs  remove.rs
anisearch-bot/src/commands/search/: anime.rs  character.rs  manga.rs  mod.rs  random.rs  seasonal.rs  staff.rs  studio.rs  trending.rs
anisearch-bot/src/components/: mod.rs  paginate.rs
anisearch-bot/src/services/: mod.rs
anisearch-bot/src/services/anilist/: cache.rs  mod.rs  trie.rs
anisearch-bot/src/services/guild/: mod.rs
anisearch-bot/src/services/metrics/: mod.rs
anisearch-bot/src/services/user/: mod.rs
anisearch-bot/src/utils/: commands.rs  embeds.rs  format.rs  mod.rs  urls.rs
anisearch-bot/src/utils/components/: mod.rs  paginate.rs
anisearch-entity/: Cargo.toml
anisearch-entity/src/: guild_command_usages.rs  guilds.rs  lib.rs  prelude.rs  private_command_usages.rs  sea_orm_active_enums.rs  user_profiles.rs  users.rs
anisearch-lib/: Cargo.toml  build.rs
anisearch-lib/proto/: bot.proto
anisearch-lib/src/: config.rs  database.rs  grpc.rs  lib.rs
anisearch-migration/: Cargo.toml
anisearch-migration/src/: lib.rs  m20220101_000001_initial_schema.rs
anisearch-web/: Cargo.toml  Dockerfile
anisearch-web/src/: config.rs  error.rs  main.rs
anisearch-web/src/api/: mod.rs
anisearch-web/src/api/bot/: commands.rs  mod.rs  shards.rs  stats.rs
anisearch/cogs/: about.py  anilist.py  anime.py  character.py  contact.py  help.py  manga.py  myanimelist.py  ping.py  prefix.py  random.py  remove.py  setprofile.py  source.py  staff.py  studio.py
anisearch/cogs/TopGG/: TopGG.py  __init__.py
anisearch/cogs/about/: __init__.py  about.py
anisearch/cogs/admin/: __init__.py  admin.py
anisearch/cogs/anilist/: __init__.py  anilist.py
anisearch/cogs/anime/: __init__.py  anime.py
anisearch/cogs/character/: __init__.py  character.py
anisearch/cogs/contact/: __init__.py  contact.py
anisearch/events/: guild_join.py  guild_leave.py
anisearch/handlers/: error_handler.py  topgg.py
anisearch/queries/: anilist_query.py
anisearch/utils/: anilist.py  animenewsnetwork.py  animethemes.py  checks.py  constants.py  crunchyroll.py  database.py  embeds.py  enums.py  formats.py  formatters.py  jikan.py  kitsu.py  logger.py  menus.py  misc.py  miscellaneous.py  paginator.py  requests.py  saucenao.py  trace.py  tracemoe.py
asuka/: Dockerfile  README.md  asuka.py  requirements.txt
bot/: Dockerfile  README.md  requirements.txt
bot/anisearch/: __init__.py  __main__.py  api.py  bot.py  config.py  database.py
config/: config_example.py
css/: app.31b62c90.css
dashboard/: Dockerfile  app.py  config.example.py  config.py  requirements.txt
dashboard/templates/: index.html  logs.html
db/: README.md  init.sql
entity/: Cargo.toml
entity/src/: guilds.rs  users.rs
events/guild/: guild_join.py  guild_leave.py
gh-pages/: .eslintrc.js  README.md  deploy.sh  index.html  invite.html  package-lock.json  package.json  support.html  vue.config.js
gh-pages/css/: styles.css
gh-pages/js/: main.js
gh-pages/public/: index.html
gh-pages/src/: App.vue  main.ts
handlers/: topgg.py
js/: app.9568e881.js  chunk-vendors.efc032ca.js
migration/: Cargo.toml
migration/src/: m20220101_000001_initial_schema.rs
modules/about/: about.py
modules/anilist/: anilist.py
modules/anime/: anime.py  anime_query.py
modules/character/: character_query.py
modules/manga/: manga_query.py
modules/myanimelist/: myanimelist.py
modules/random/: random_query.py
modules/setprofile/: setprofile.py
modules/source/: source.py
modules/staff/: staff_query.py
modules/studio/: studio.py
notifier/: Dockerfile  notifier.py  requirements.txt
notify/: Dockerfile  notify.py  requirements.txt
src/: config.rs  database.rs  events.rs  main.rs
src/anisearch/: __main__.py  anisearch.py  main.py  start.sh
src/utils/: embeds.rs  mod.rs
src/website/: index.php
web/: Dockerfile  README.md  app.py  go.mod  go.sum  main.go  requirements.txt  types.go  utils.go
web/templates/: index.html  index.tmpl  index.tmpl.html
web/types/: types.go
web/utils/: utils.go
website/: index.html
website/css/: styles.css
website/js/: main.js
(+165 files in other folders)
