[workspace]
resolver = "3"
members = ["anisearch-bot", "anisearch-entity", "anisearch-lib", "anisearch-migration", "anisearch-web"]

[workspace.package]
version = "3.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = "0.4"
cruet = "0.15"
dashmap = "6.1"
envy = { git = "https://github.com/softprops/envy" }
futures = "0.3"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
prost = "0.13"
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = "1.0"
serde-inline-default = "0.2"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tonic = "0.13"
tonic-build = "0.13"
tonic-health = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
