[workspace]
resolver = "3"
members = ["anisearch-bot", "anisearch-entity", "anisearch-lib", "anisearch-migration", "anisearch-web"]

[workspace.package]
version = "3.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = "0.4"
cruet = "0.15"
dashmap = "6.1"
envy = "0.4"
futures = "0.3"
graphql_client = "0.14"
once_cell = "1.21"
poise = "0.6"
prost = "0.13"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = "1.0"
serde-inline-default = "0.2"
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.46", features = ["full"] }
tonic = "0.13"
tonic-build = "0.13"
tonic-health = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

[patch.crates-io]
envy = { git = "https://github.com/softprops/envy" }
graphql_client = { git = "https://github.com/graphql-rust/graphql-client", package = "graphql_client" }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
