[package]
name = "anisearch-bot"
version.workspace = true
edition.workspace = true

[dependencies]
anisearch-entity = { path = "../anisearch-entity" }
anisearch-lib = { path = "../anisearch-lib" }
anisearch-migration = { path = "../anisearch-migration" }

anyhow.workspace = true
chrono.workspace = true
cruet.workspace = true
dashmap.workspace = true
futures.workspace = true
graphql_client.workspace = true
once_cell.workspace = true
poise.workspace = true
regex.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic-health.workspace = true
tonic.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
