[package]
name = "anisearch-bot"
version.workspace = true
edition.workspace = true

[dependencies]
anisearch-entity = { path = "../anisearch-entity" }
anisearch-lib = { path = "../anisearch-lib" }
anisearch-migration = { path = "../anisearch-migration" }

anyhow.workspace = true
chrono.workspace = true
mimalloc.workspace = true
sea-orm.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic-health.workspace = true
tonic.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

cruet = "0.15"
dashmap = "6.1"
futures = "0.3"
graphql_client = "0.15"
humantime = "2.3"
poise = "0.6"
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
