[package]
name = "anisearch-bot"
version.workspace = true
edition.workspace = true

[dependencies]
anisearch-entity.workspace = true
anisearch-lib.workspace = true
anisearch-migration.workspace = true

anyhow.workspace = true
chrono.workspace = true
cruet.workspace = true
dashmap.workspace = true
futures.workspace = true
graphql_client.workspace = true
humantime.workspace = true
mimalloc.workspace = true
poise.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic-health.workspace = true
tonic.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
