[package]
name = "anisearch-lib"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
sea-orm-migration.workspace = true
sea-orm.workspace = true
serde.workspace = true
tracing.workspace = true

envy = { git = "https://github.com/softprops/envy" }
serde-inline-default = "0.2"

[build-dependencies]
chrono.workspace = true
