[package]
name = "anisearch-lib"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
sea-orm-migration.workspace = true
sea-orm.workspace = true
serde.workspace = true
tonic.workspace = true
tracing.workspace = true

envy = "0.4"
prost = "0.14"
serde-inline-default = "1.0"
tonic-prost = "0.14"

[build-dependencies]
chrono.workspace = true

tonic-prost-build = "0.14"
