[package]
name = "anisearch-lib"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
envy.workspace = true
prost.workspace = true
sea-orm-migration.workspace = true
sea-orm.workspace = true
serde-inline-default.workspace = true
serde.workspace = true
tonic-prost.workspace = true
tonic.workspace = true
tracing.workspace = true

[build-dependencies]
chrono.workspace = true
tonic-prost-build.workspace = true
