[package]
name = "anisearch-web"
version.workspace = true
edition.workspace = true

[dependencies]
anisearch-lib = { path = "../anisearch-lib" }
anisearch-migration = { path = "../anisearch-migration" }

anyhow.workspace = true
mimalloc.workspace = true
sea-orm.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic-health.workspace = true
tonic.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

axum = "0.8"
serde_json = "1.0"
